# git-smarts

./: README.md
branches_smart/: Cargo.toml  build.rs
branches_smart/io/: Cargo.toml
branches_smart/io/src/: lib.rs
branches_smart/src/: contract.rs
branches_smart/state/: Cargo.toml
branches_smart/state/src/: lib.rs
master/: Cargo.toml
master/io/: Cargo.toml
master/io/src/: lib.rs
master/src/: contract.rs
master/state/src/: lib.rs
master_smart/: Cargo.toml  build.rs
master_smart/io/src/: lib.rs
master_smart/src/: contract.rs
master_smart/state/: Cargo.toml
master_smart/state/src/: lib.rs
repo/: Cargo.toml  Makefile  build.rs
repo/io/: Cargo.toml
repo/io/src/: lib.rs
repo/src/: contract.rs
repo/state/: Cargo.toml
repo/state/src/: lib.rs
repos_smart/: .gitignore  Cargo.toml
repos_smart/io/: Cargo.toml
repos_smart/io/src/: lib.rs
repos_smart/src/: contract.rs
repos_smart/state/: Cargo.toml
repos_smart/state/src/: lib.rs
user/: .gitignore  Cargo.toml  build.rs
user/io/: Cargo.toml
user/io/src/: lib.rs
user/src/: contract.rs  lib.rs
user/state/: Cargo.toml
user/state/src/: lib.rs
