[package]
name = "repo"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["debug"] }
repo-io = { path = "io" }
user-io = { path = "../user/io"}
# user-io = { path = "../user/io"}
primitive-types = { version = "0.12.1", default-features = false }
scale-info = { version = "2.6.0", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.6" }
gear-lib-derive = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.6" }
# getrandom = { version = "0.2", features = ["js"] }
# uuid = { version = "1.3.3", default-features = false, features = ["v4"] }
codec = { package = "parity-scale-codec", version = "3.4", default-features = false }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
# uuid = { version = "1.3.3", default-features = false, features = ["v4"] }
# getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
repo-io = { path = "io" }
user-io = { path = "../user/io"}
# user-io = { path = "../user/io"}
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
members = [
    "state"
]